--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #0d1117;
+    color: #fff;
     display: flex;
     justify-content: space-between; /* Align items to left and canvas to right */
     align-items: center;
@@ -7,10 +8,6 @@ body {
     margin: 0;
 }
 
-#canvas-container {
-    text-align: center;
-    margin-right: 20px; /* Adjust margin to move canvas to right */
-}
 
 canvas {
     border: 1px solid #d3d3d3;
@@ -18,17 +15,13 @@ canvas {
     box-shadow: 0 0 15px 5px rgba(75, 75, 75, 0.5);
 }
 
-#button-container {
-    margin-top: 20px;
-    margin-left: 20px; /* Adjust margin to move buttons to left */
-}
 
 button {
-    margin-top: 10px;
+    margin-top: 1px;
     padding: 8px 16px;
     font-size: 16px;
     cursor: pointer;
-    background-color: #000;
+    background-color: #000000;
     color: #fff;
     border: 1px solid #fff;
     border-radius: 2px;
